--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,12 +23,12 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-            buildConfigField "String", "BASE_URL", "\"https://api.chucknorris.io/jokes/\""
+            buildConfigField "String", "BASE_URL", "\"https://api.chucknorris.io/jokes\""
         }
         debug {
             debuggable true
             minifyEnabled false
-            buildConfigField "String", "BASE_URL", "\"https://api.chucknorris.io/jokes/\""
+            buildConfigField "String", "BASE_URL", "\"https://api.chucknorris.io/jokes\""
         }
     }
 
@@ -72,7 +72,7 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-savedstate:$lifecycle_version"
-    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
     kapt "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
 
     // Room
