--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,12 +23,12 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-            buildConfigField "String", "BASE_URL", "\"https://api.chucknorris.io/jokes\""
+            buildConfigField "String", "BASE_URL", "\"https://api.chucknorris.io/jokes/\""
         }
         debug {
             debuggable true
             minifyEnabled false
-            buildConfigField "String", "BASE_URL", "\"https://api.chucknorris.io/jokes\""
+            buildConfigField "String", "BASE_URL", "\"https://api.chucknorris.io/jokes/\""
         }
     }
 
