--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,14 +12,21 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ChuckNorrisJokesApp">
-        <activity android:name=".presentation.splash.SplashActivity">
+        <activity android:name=".presentation.detail.DetailJokeActivity"></activity>
+        <activity android:name=".presentation.search.SearchJokeActivity" />
+        <activity
+            android:name=".presentation.splash.SplashActivity"
+            android:noHistory="true"
+            android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".presentation.category.JokeCategoryActivity" />
+        <activity
+            android:name=".presentation.category.JokeCategoryActivity"
+            android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar" />
         <activity android:name=".presentation.MainActivity" />
     </application>
 
